# Parallel_Programming_Final_Project

./: .gitignore  CMakeLists.txt  a.out  kmean_serial.h  kmeans.c  kmeans_new  kmeans_new.c  kmeans_new.cpp  kmeans_new.h  kmeans_par.cpp  kmeans_parallel.cpp  kmeans_parallel.h  kmeans_serial.cpp  kmeans_targeted.c  kmeans_util.cpp  kmeans_util.h  nqueens_backtrack.c  nqueens_branch.cpp  nqueens_somers.c  readme.txt  test.cpp
kmeans/: 30  perf_test combo
